# gutenprint

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  ChangeLog.pre-5.2.11  ChangeLog.pre-5.3  FAQ.html  INSTALL  MacOSX.php  MacOSX.php3  Makefile  Makefile.am  Makefile.in  Makefile.standalone  NEWS  NEWS.4.2  README  README.dither  README.escp2  README.new-printer  README.package  README.weave  RELNOTES  acconfig.h  autogen.sh  bash_profile  canon-unprint.c  canon-unprint.cpp  canunprint.cpp  config.h.in  configure.ac  configure.ac.in  configure.in  configure.in.in  cups-gimpprint.list.in  cups-gutenprint.list.in  escp2-unprint.c  escp2-weavetest.c  (+73 more)
cups/: .cvsignore  Makefile.in  README.txt  calibrate.c  canon.c  check.c  command.txt  command.types  commandtoepson.c  configure  configure.in  dither.c  epson.c  epson.drv  genppd.c  pack.c  rastertoepson.c  rastertoprinter.c  util.h
doc/: .cvsignore  5.0-release-plan.txt  FAQ.html  Makefile.am  README.dither  README.escp2  README.maintaining  README.new-printer  README.weave  appendices.texi  dither.texi  escp2.texi  functions.texi  gimpprint.dox.in  gimpprint.texi  gutenprint-options  gutenprint-users-manual.odt  gutenprint.dox.in  gutenprintui2.dox.in  indices.texi  integrating.texi  introduction.texi  new-printer.texi  print.sgml  programs.texi  types.texi  using.texi  weave.texi
doc/developer/: .cvsignore  .gitignore  Makefile.am  cleanwarnings.pl  copying.texi  dither.texi  dither.xml  escp2.texi  escp2.xml  functions.texi  gimpprint.texi  gpl-appendix.xml  gutenprint.xml  indices.texi  integrating.texi  introduction.texi  introduction.xml  new-printer.texi  new-printer.xml  overview.texi  problems.texi  problems.xml  using.texi  using.xml  weave.texi
doc/users_guide/: .cvsignore  Makefile  Makefile.am  README  ch_0.sgml  ch_4.sgml  cups-edition.sgml  cups.sgml  gfdl.sgml  gimp-edition.sgml  gimp.sgml  history.sgml  title.sgml  users-guide.sgml  users_guide.sgml  util-edition.sgml  utils.sgml
include/: .gitignore  Makefile.am
include/gimp-print/: .cvsignore  Makefile.am  array.h  bit-ops.h  channel.h  color.h  curve-cache.h  curve.h  dither.h  gimp-print-intl-internal.h  gimp-print-intl.h  gimp-print-module.h  gimp-print-ui.h  gimp-print-version.h.in  gimp-print.h  gimp-print.h.in  image.h  list.h  module.h  mxml.h  paper.h  path.h  printers.h  sequence.h  string-list.h  util.h  vars.h  weave.h  xml.h
include/gimp-print-ui/: Makefile.am  gimp-print-ui.h
include/gimp-print-ui2/: Makefile.am  gimp-print-ui.h
include/gutenprint/: .gitignore  Makefile.am  array.h  bit-ops.h  channel.h  color.h  curve-cache.h  curve.h  dither.h  gutenprint-intl-internal.h  gutenprint-intl.h  gutenprint-module.h  gutenprint-version.h.in  gutenprint.h  image.h  list.h  module.h  mxml.h  paper.h  path.h  printers.h  refcache.h  sequence.h  string-list.h  types.h  util.h  vars.h  weave.h  xml.h
include/gutenprintui/: Makefile.am  gutenprintui.h
include/gutenprintui2/: .gitignore  Makefile.am  curve.h  gammacurve.h  gutenprintui.h
man/: .cvsignore  .gitignore  Makefile.am  cups-calibrate.8.in  cups-genppd.8.in  cups-genppdconfig.8.in  cups-genppdupdate.8.in  escputil.1.in  gimpprint-color.7.in  gimpprint-config.1.in  gimpprint-dithers.7.in  gimpprint-imagetypes.7.in  gimpprint-inktypes.7.in  gimpprint-mediasizes.7.in  gimpprint-mediasources.7.in  gimpprint-mediatypes.7.in  gimpprint-models.7.in  gimpprint-resolutions.7.in  gimpprint.3.in  gutenprint-color.7.in  gutenprint-dithers.7.in  gutenprint-imagetypes.7.in  gutenprint-inktypes.7.in  gutenprint-mediasizes.7.in  gutenprint-mediasources.7.in  gutenprint-mediatypes.7.in  gutenprint-models.7.in  gutenprint-resolutions.7.in  gutenprint.3.in  ijsgimpprint.1  ijsgimpprint.1.in  ijsgutenprint.1.in
scripts/: .cvsignore  .gitignore  Makefile.am  autogen.sh  build-release  build-release.in  buildgimpprintdebs  count-cpus  count-cpus.in  gimp-patch  global.mk  gversion  gversion.in  mkchlog  mkgitlog.in  snapstamp  test-gversion  test-gversion.in  uninstall-gutenprint.command  wzpaq.in
scripts/travis/: checksums  full  integration  smoke
src/cups/: .cvsignore  COPYING  ChangeLog  Info.plist  Info.plist.in  Makefile.am  README  backend_canonselphy.c  backend_canonselphyneo.c  backend_citizencw01.c  backend_common.c  backend_common.h  backend_dnpds40.c  backend_hiti.c  backend_kodak1400.c  backend_kodak605.c  backend_kodak6800.c  backend_kodak8800.c  backend_magicard.c  backend_mitsu.c  backend_mitsu.h  backend_mitsu70x.c  backend_mitsu9550.c  backend_mitsud90.c  backend_mitsup95d.c  backend_shinkos1245.c  backend_shinkos2145.c  backend_shinkos6145.c  backend_shinkos6245.c  backend_sinfonia.c  backend_sinfonia.h  backend_sonyupd.c  backend_sonyupdneo.c  backend_sonyupdr150.c  blacklist  canon.c  citizencw01_print.c  command.types  commandtocanon.c  commandtodyesub.c  (+36 more)
src/foomatic/: .cvsignore  Makefile.am  foomatic-generator.in  foomatic-printermap  gimp-print-version.c  gutenprint-version.c  paper_sizes.c  printer_margins.c  printer_options.c  printers.c  stp_limits.c
src/ghost/: .cvsignore  .gitignore  Makefile.am  README  contrib.mak.addon  contrib.mak.addon.old  debian-patch  devs.mak.addon-5.10  gdevstp.c  ijsgimpprint.c  ijsgutenprint.c
src/gimp/: .cvsignore  Makefile.am  gimp-print-ui-internal.h  gimp-print-ui.h  gimp_color_window.c  gimp_main_window.c  gtk_color_window.c  gtk_main_window.c  (+7 more)
test/: .cvsignore  .gitignore  Makefile.am  bjc-unprint.c  compress-5level.sh  compress-5level.sh.in  compress-6level.sh  compress-6level.sh.in  curve.c  escp2-unprint.c  escp2-weavetest.c  gen-printer-list.c  parse-bjc  parse-bjc.in  parse-escp2  parse-escp2.in  pcl-unprint.c  pixma_parse.c  pixma_parse.h  printer_options.c  run-testdither  run-testdither.in  run-testdither.test.in  run-weavetest  run-weavetest.in  run-weavetest.test.in  test-curve.in  test-curve.test.in  testdither.c  testpattern.c  testpattern.h  testpattern.sample  testpatternl.l  uncompress-5level.sh  uncompress-5level.sh.in  uncompress-6level.sh  uncompress-6level.sh.in  unprint.c  xml-curve.c
(+939 files in other folders)
